# gouter

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  dev.sh  docker-compose.yml  entrypoint.sh  package.json  pyproject.toml  vue.config.js
api/: auth.py  draw.py  main.py  spa.py  utils.py  ws.py
public/: index.html
src/: App.jsx  Dropdown.jsx  Index.jsx  Login.jsx  main.js  utils.js  ws.js
src/styles/: common.scss  dropdown.scss  login.scss
